server/deployment/Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: recorder-app-pod
  labels:
    app: recorder-app
spec:
  containers:
    - name: app
      image: webrtcrecordersample.azurecr.io/webrtcrecordersample:0.0.3
      ports:
        - name: http
          containerPort: 80
        - name: websockets
          containerPort: 1600
        - name: rtcprimary
          containerPort: 1602
          protocol: UDP
        - name: rtcaux
          containerPort: 1603
          protocol: UDP
  imagePullSecrets:
    - name: acr-principal
    # https://docs.microsoft.com/en-us/azure/container-registry/container-registry-auth-kubernetes
