server/deployment/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: recorderapp-ingress
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
spec:
    tls:
        - secretName: debugcert
    rules:
    - http:
        paths:
        - path: /signalling
          backend:
            serviceName: recorder-websockets
            servicePort: 1600
        - path: /.*
          backend: 
            serviceName: recorder-http
            servicePort: 80
